# DotNameCppFree

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_default_debug.sh  conanfile.py  cpp.sh  graph.html
.github/workflows/: fedora.yml
assets/: customstrings.json  ems-mini.html
cmake/: project-common.cmake  project-library.cmake  project-standalone-backup.cmake  project-standalone-new.cmake  project-standalone.cmake  project-tests.cmake  tmplt-assets.cmake  tmplt-debug.cmake  tmplt-emscripten.cmake  tmplt-runtime.cmake
conan_tools/: __init__.py  cmake_patches.py  cmake_presets.py
include/DotNameLib/: DotNameLib.hpp
src/: DotNameLib.cpp
src/Assets/: AssetContext.cpp  AssetContext.hpp
src/Logger/: Logger.hpp
src/Utils/: Utils.cpp  Utils.hpp
standalone/: CMakeLists.txt
standalone/src/: AppCore.hpp  Main.cpp
standalone/tests/: CMakeLists.txt  LibTester.cpp
